fixing alignment

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,8 @@
   margin-right: 75px;
   margin-left: 200px;
 }
+
+.ProjectButton{
+  text-align: center;
+  margin-top: 20px;
+}
